# asciipic

./: .gitignore  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE  Procfile  README.md  app.json  asciipic_kube.yml  dummy_data.sql  oracle-requirements.txt  requirements.txt  setup.cfg  setup.py  t.py  test-requirements.txt  tox.ini
asciipic/: shell.py  version.py
asciipic/api/: __init__.py  base.py
asciipic/api/api_endpoint/: __init__.py  auth_version.py  version.py
asciipic/api/numeric/: __init__.py  resource.py
asciipic/api/parser/: __init__.py
asciipic/cli/: base.py
asciipic/cli/commands/: __init__.py  server.py  worker.py
asciipic/common/: constant.py  exception.py  log.py  tools.py  util.py
asciipic/config/: __init__.py  api.py  base.py  default.py  factory.py  journalize.py  options.py  oracle.py  redis.py  worker.py
asciipic/db/managers/: user.py
asciipic/db/oracle/: association_tags.py  base.py  factory.py  image.py  init.py  jour.py  manager.py  tags.py  user.py
asciipic/tasks/: base.py  echo_task.py  example_task.py
asciipic/web/: index.html  journalizeIndex.html
asciipic/web/css/: journalizeStyle.css  term.css
asciipic/web/js/: term.js  (+2 more)
asciipic/worker/: base.py  worker.py
asciipic_search/asciipicSearch/: pom.xml
asciipic_statistics/asciipicJournalize/: pom.xml
crawl_module/: pom.xml
dockerfiles/asciipic/: Dockerfile
etc/asciipic/: asciipic-config-generator.conf  asciipic.conf
sgbd/: create_all_tables.sql  create_user.sql  populate_tables.sql  tables_description.txt
sgbd/data_modeler_source_files/: asciiPic-SGBD.dmd
(+186 files in other folders)
