[metadata]
name = asciipic
version = 0.1.0
summary = API
description-file =
    README.md
author = Micu Matei-Marius
author-email = micumatei@gmail.com
home-page = asciipic.xyz
classifier =
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    asciipic 

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    asciipic = asciipic.shell:main

oslo.config.opts =
    asciipic.conf = asciipic.config.options:get_options
